# humantyped

./: .gitignore  README.md
extension/: background.js  content.js  inject.js  manifest.json  popup.css  popup.html  popup.js  scanner.js
extension/icons/: generate.html
server/: .gitignore  Cargo.toml  Dockerfile  fly.toml  package.json  tailwind.config.js
server/migrations/: 20240101000000_init.sql
server/src/: api.rs  db.rs  main.rs  pages.rs  rate_limit.rs
server/src/components/: feed.rs  footer.rs  header.rs  landing.rs  mod.rs  shell.rs  verify.rs
server/static/: styles.css
server/style/: input.css
